# kkn-data-model-algo-data-model-scraper

./: .gitignore  README.md  data_structure.py  database.py  etn_cdm_upserter.py  etn_doc_mapping_extractor.py  excel_data_extractor.py  export_to_database.py  export_to_excel.py  extend_knx_doc.py  kinaxis_tables_export.xlsx  logger_config.py  package-lock.json  package.json  pyproject.toml  save_session_data.py  scraper.py  tables.duckdb  test_database.py  trl_augmentation_extractor.py
