[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "Web scraper that uses existing Edge browser session"
authors = ["Mauricio Alves <mauricio_alves@msn.com>"]

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.40.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
duckdb = "^1.3.2"
pandas = "^2.3.2"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"